--- a/css/creative.css
+++ b/css/creative.css
@@ -110,12 +110,14 @@ aside {
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #f05f40;
+    /* color: #f05f40; */
+    color: #140f59;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #f05f40!important;
+    /* color: #f05f40!important; */
+    color: #140f59!important;
     background-color: transparent;
 }
 
@@ -136,7 +138,8 @@ aside {
 
     .navbar-default .navbar-header .navbar-brand:hover,
     .navbar-default .navbar-header .navbar-brand:focus {
-        color: #fff;
+        /* color: #fff; */
+        color: #444081;
     }
 
     .navbar-default .nav > li>a,
@@ -146,7 +149,8 @@ aside {
 
     .navbar-default .nav > li>a:hover,
     .navbar-default .nav>li>a:focus:hover {
-        color: #fff;
+        /* color: #fff; */
+        color: #444081;
     }
 
     .navbar-default.affix {
@@ -156,12 +160,14 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: #f05f40;
+        /* color: #f05f40; */
+        color: #140f59;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #eb3812;
+        /* color: #eb3812; */
+        color: #140f59;
     }
 
     .navbar-default.affix .nav > li>a,
@@ -171,7 +177,8 @@ aside {
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #f05f40;
+        /* color: #f05f40; */
+        color: #140f59;
     }
 }
 
